# otel-llm-poc

./: .editorconfig  .gitignore  Makefile  README.md  _convert_trace_to_descriptive_text.py  pyproject.toml  requirements.txt  retrieval.py  streamlit_app.py  test.json  testrun.json  trace.json
app/: config.py  create_vector_store.py  streamlit_app.py
app/rag/: retrieval.py  vectorstore.py
data/: trace-description.txt  vectorstore.faiss  vectorstore.pkl
